--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div id="sticky">
       <div class="nav">
         <ul class="pull-left">
-          <strong><li><%= link_to "//PaperThin", root_path %></li></strong>
+          <strong><li><%= link_to "//PaperThinCut", root_path %></li></strong>
           <li>
             <%= link_to (goods_path) do %>
               Analytics
