--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,7 +2,7 @@
   <h4><%= @request.name %></h4>
   <h5><%= @request.email %><h5>
   <br/>
-  <font color="red"><%= render @request.items %></font>
+  <h4><font color="red"><%= render @request.items %></font></h4>
   <br/>
   <%= link_to 'Delete', @request_path, method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
