--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,20 +15,23 @@
       <div class="nav">
         <ul class="pull-left">
           <strong><li><%= link_to "//PaperThinCut", root_path %></li></strong>
+          <% if logged_in? %>
           <li>
-            <%= link_to (goods_path) do %>
-              Analytics
-            <% end %>
+            <%= link_to "Analytics", goods_path %>
           </li>
           <li>
-            <%= link_to (distributors_path) do %>
-              Order
-            <% end %>
+            <%= link_to "Order", distributors_path %>
           </li>
+          <li>
+            <%= link_to 'Log Out', logout_path %>
+          </li>
+          <% else %>
+          <li><%= link_to 'Log in', login_path %></li>
+          <li><%= link_to 'Register', new_user_path %></li>
+          <% end %>
         </ul>
       </div>
     </div>
     <%= yield %>
-
   </body>
 </html>
