--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -11,6 +11,9 @@
   <h4><%= link_to "Users", users_path %></h4>
 </div>
 <div class="span3 well">
+  <h4><%= link_to "Inventories", @inventories %></h4>
+</div>
+<div class="span3 well">
   <h4>Products</h4>
   <br/>
   <% @goods.each do |good| %>
