--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -11,7 +11,7 @@
   <h4><%= link_to "Users", users_path %></h4>
 </div>
 <div class="span3 well">
-  <h4><%= link_to "Inventories", @inventories %></h4>
+  <h4><%= link_to "Inventories", inventories_path %></h4>
 </div>
 <div class="span3 well">
   <h4>Products</h4>
