--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,16 +1,21 @@
 <div class="span3 well">
+  <%= pie_chart Request.group(:created_at).count %>
   <h4><%= link_to "Order", distributors_path %></h4>
 </div>
 <div class="span3 well">
+  <%= geo_chart Request.group(:created_at).count %>
   <h4><%= link_to "Order History", requests_path %></h4>
 </div>
 <div class="span3 well">
+  <%= pie_chart Post.group(:created_at).count %>
   <h4><%= link_to "Notes", posts_path %></h4>
 </div>
 <div class="span3 well">
+  <%= pie_chart User.group(:created_at).count %>
   <h4><%= link_to "Users", users_path %></h4>
 </div>
 <div class="span3 well">
+  <%= column_chart Item.group(:request_id).count %>
   <h4><%= link_to "Inventories", inventories_path %></h4>
 </div>
 <div class="span3 well">
