--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -3,5 +3,6 @@
     <td><%= item.amount %><td>
     <td><%= item.good.unit %> -></td>
     <td><%= item.good.name %></td>
+    <td><%= item.request.additional %></td>
   </tr>
 </table>
