--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,9 +23,13 @@
   display: block
  }
 
+ .span3 well {
+  backgorund-color: #00FA9A;
+ }
+
  body {
   padding-left: 10px;
-  background-color: #525252;
+  background-color: #00FA9A;
   padding-right: 10px;
   padding-top: 70px;
  }
@@ -99,9 +103,5 @@ div.nav_item {
 
 div.comment_votes {
   padding: 10px;
-}
-
-body {
-  background-color: rgb(152,251,152);
 }
 
