--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,21 +1,21 @@
 <div class="span4 well">
-  <%= pie_chart Request.group(:created_at).count %>
+  <%= pie_chart Request.group(:name).count %>
   <h4><%= link_to "Order", distributors_path %></h4>
 </div>
 <div class="span4 well">
-  <%= geo_chart Request.group(:created_at).count %>
+  <%= column_chart Request.group_by_hour_of_day(:created_at, format: "%l %P").count %>
   <h4><%= link_to "Order History", requests_path %></h4>
 </div>
 <div class="span4 well">
-  <%= pie_chart Post.group(:created_at).count %>
+  <%= column_chart Post.group(:title).count %>
   <h4><%= link_to "Notes", posts_path %></h4>
 </div>
 <div class="span4 well">
-  <%= pie_chart User.group(:created_at).count %>
+  <%= pie_chart User.group(:username).count %>
   <h4><%= link_to "Users", users_path %></h4>
 </div>
 <div class="span4 well">
-  <%= column_chart Item.group(:request_id).count %>
+  <%= line_chart Item.group(:request_id).count %>
   <h4><%= link_to "Inventories", inventories_path %></h4>
 </div>
 <div class="span4 well">
