1:M inventory&goods, render good

--- a/app/views/inventories/_form.html.erb
+++ b/app/views/inventories/_form.html.erb
@@ -1,20 +1,9 @@
-<div class="span5 well">
-  <%= form_for @inventory do |f| %>
-    <div class="control-group">
-      <%= f.label :name %>
-      <%= g.text_field :name %>
-    </div>
-    <div class="control-group">
-      <%= f.label :unit %>
-      <%= g.text_field :unit %>
-    </div>
-    <div class="control-group">
-      <%= f.label :amount %>
-      <%= g.text_field :amount %>
-    </div>
-    <div class="control-group">
-      <%= f.label :description %>
-      <%= g.text_area :description %>
-    </div>
-  <% end %>
-</div>
+<%= form_for @inventory do |f| %>
+  <div class="control-group">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  <div class="control-group">
+    <%= f.submit %>
+  </div>
+<% end %>
