--- a/app/views/inventories/show.html.erb
+++ b/app/views/inventories/show.html.erb
@@ -1,5 +1,6 @@
 <div class="span4 well">
-
-    <%= render 'goods/good' %>
-
+  <h4><%= render 'goods/good' %></h4>
+</div>
+<div class="span3 well">
+  <h5><%= link_to "Edit", edit_inventory_path %></h5>
 </div>
