--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -7,7 +7,7 @@
   <h4><%= link_to "Order History", requests_path %></h4>
 </div>
 <div class="span4 well">
-  <%= column_chart Post.group(:title).count %>
+  <%= bar_chart Post.group(:title).group(:created_at).count %>
   <h4><%= link_to "Notes", posts_path %></h4>
 </div>
 <div class="span4 well">
