--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -5,9 +5,9 @@
     <%= f.text_field :name %>
   </div>
   <br/>
-  <div class="control-group">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
+  <div class="control-group>">
+    <%= f.label :quantity %>
+    <%= f.text_field :quantity %>
   </div>
   <br/>
   <div class="control-group">
@@ -15,9 +15,9 @@
     <%= f.text_field :unit %>
   </div>
   <br/>
-  <div class="control-group>">
-    <%= f.label :price %>
-    <%= f.text_field :price %>
+  <div class="control-group">
+    <%= f.label :description %>
+    <%= f.text_area :description %>
   </div>
   <br/>
   <%= f.label "Distributors" %>
