--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,16 @@
  @import "bootstrap";
  @import "bootstrap-responsive";
 
+ table{
+    table-layout: fixed;
+    width: 200px;
+}
+
+th, td {
+    overflow: hidden;
+    width: 100px;
+}
+
  label {
   width: 5em;
   float: left;
