--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app=order>
   <head>
     <title>PaperThinCut - quick look and make decision</title>
       <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
