--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html ng-app=order>
+<html ng-app>
   <head>
     <title>PaperThinCut - quick look and make decision</title>
-      <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
       <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+      <%= javascript_include_tag "application" %>
+      <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
       <%= csrf_meta_tags %>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
       <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
