--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,7 +35,7 @@ th, td {
 
  body {
   padding-left: 10px;
-  background-color: #00FA9A;
+  background-color: #555555;
   padding-right: 10px;
   padding-top: 70px;
  }
