--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,4 +1,10 @@
 <div class="span4 well">
+  <form>
+    <input type="text" ng-model="newEntry.name" placeholder="Enter here">
+  </form>
+  {{newEntry.name}}
+</div>
+<div class="span4 well">
   <%= line_chart Request.group(:name).group(:created_at).count %>
   <h4><%= link_to "Order", distributors_path %></h4>
 </div>
