--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,9 +15,31 @@
  @import "bootstrap";
  @import "bootstrap-responsive";
 
+ .jumbotron {
+  height:500px;
+  background-image: asset-data-url('collaborate-2.jpg');
+}
+
+.jumbotron .container {
+  position: relative;
+  top:70px;
+}
+
+.jumbotron h1 {
+  color: red;
+  font-size: 35px;
+  font-family: 'Shift', sans-serif;
+  font-weight: bold;
+}
+
+.jumbotron p {
+  font-size: 20px;
+  color: red;
+}
+
  table{
     table-layout: fixed;
-    width: 200px;
+    width: 100px;
 }
 
 th, td {
@@ -37,7 +59,7 @@ th, td {
   padding-left: 10px;
   background-color: #555555;
   padding-right: 10px;
-  padding-top: 70px;
+  padding-top: 55px;
  }
 
  li {
