--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,3 +1,9 @@
+<div class="jumbotron">
+  <div class="container">
+    <h1></h1>
+  </div>
+</div>
+<hr>
 <div class="span4 well">
   <form>
     <input type="text" ng-model="newEntry.name" placeholder="Enter here">
