--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,11 +25,11 @@
   top:70px;
 }
 
-.jumbotron h1 {
-  color: red;
-  font-size: 35px;
-  font-family: 'Shift', sans-serif;
+.jumbotron h3 {
+  color: black;
+  font-family: 'Comic-Sans', sans-serif;
   font-weight: bold;
+  float: top;
 }
 
 .jumbotron p {
