--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
 
  .jumbotron {
   height:500px;
-  background-image: asset-data-url('collaborate-2.jpg');
+  background-image: asset-data-url('graphs.jpg');
 }
 
 .jumbotron .container {
