--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -81,8 +81,8 @@ th, td {
   -moz-box-shadow: 0px 0px 15px 0px #000000;
   box-shadow: 0px 0px 15px 0px #000000;
   /* Adds the transparent background */
-  background-color: #104E8B;
-  opacity: 0.9;
+  background-color: black;
+  opacity: 0.8;
 }
 
 #sticky li {
@@ -92,7 +92,7 @@ th, td {
 
 #sticky a {
   font-size: 14px;
-  color: black;
+  color: white;
   font-family: Comic Sans MS, serif;
   padding-left: 15px;
 }
