--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -4,11 +4,11 @@
   </div>
 </div>
 <hr>
-<div class="span4 well">
+<div class="span3 well" >
   <form>
     <input type="text" ng-model="newEntry.name" placeholder="Enter here">
   </form>
-  {{newEntry.name}}
+ {{entry.name}}
 </div>
 <div class="span4 well">
   <%= line_chart Request.group(:name).group(:created_at).count %>
