--- a/app/views/distributors/_form.html.erb
+++ b/app/views/distributors/_form.html.erb
@@ -5,6 +5,10 @@
       <%= f.text_field :name %>
     </div>
     <div class="control-group">
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+    </div>
+    <div class="control-group">
       <%= f.label :description %>
       <%= f.text_area :description %>
     </div>
