--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -5,16 +5,10 @@
 </div>
 <hr>
 <div class="span3 well">
-  <div ng-controller="OrderCtrl">
     <form>
       <input type="text" ng-model="newEntry.name" placeholder="Enter here">
     </form>
-   <ul>
-    <li ng-repeat="entry in entries">
-      {{entry.name}}
-    </li>
-   </ul>
-  </div>
+    {{newEntry.name}}
 </div>
 <div class="span4 well">
   <%= line_chart Request.group(:name).group(:created_at).count %>
