--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,14 +1,26 @@
 <div class="span5 well">
   <%= form_for @request do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name, size: 40 %>
+  <div class="span4 well">
+     <%= f.label "Name" %>
+    <%= f.collection_check_boxes :distributor_ids, Distributor.all, :id, :name do |cb|%>
+      <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
+    <% end %>
+  </div>
     <br/>
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+  <div class="span4 well">
+    <%= f.label "Email" %>
+    <%= f.collection_check_boxes :distributor_ids, Distributor.all, :id, :email do |cb|%>
+      <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
+    <% end %>
+  </div>
     <br/>
+  <div class="span4 well">
     <%= f.label :additional %>
     <%= f.text_area :additional %>
+  </div>
     <br/>
+  <div class="span3 well">
     <%= f.submit %>
+  </div>
   <% end %>
 </div>
