--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,36 +1,33 @@
-<div class="jumbotron">
-  <div class="container">
-    <h3>glance.decide.</h3>
-  </div>
+<div class="col-md-12">
+  <center><h3>Simplify your operation. Aim to help small businesses, <strong>//paprthin</strong> makes ordering, managing inventory, posting messages easier for managers<h3></center>
 </div>
-<hr>
-<div class="span3 well">
+<div class="col-md-4">
+  <%= line_chart Request.group(:name).group(:created_at).count %>
+    <p>Only <strong><%= link_to "Order", distributors_path %></strong> list the items that you want. No need to shift through the catalog everytime anymore.</p>
+</div>
+<div class="col-md-4">
+  <%= pie_chart Distributor.group(:name).count %>
+  <p>See your <strong><%= link_to "Order History", requests_path %></strong> here. Complete with charts for you to glance the dynamic of your ordering every week.</p>
+</div>
+<div class="col-md-4">
+  <%= bar_chart Post.group(:title).group(:created_at).count %>
+  <p>Write your <strong><%= link_to "Notes", posts_path %></h4></strong> here. Just in case you make some changes or simply for future reminders.</p>
+</div>
+<div class="col-md-4">
+  <%= pie_chart User.group(:username).count %>
+  <p>See how many <strong><%= link_to "Users", users_path %></strong> have access to your app and their identities.</p>
+</div>
+<div class="col-md-4">
+  <%= bar_chart Inventory.group(:name).count %>
+  <p>Since you'll more than likely to have <strong><%= link_to "Inventories", inventories_path %></strong> at the end of the month, we though might as well include it here.</p>
+</div>
+<div class="col-md-4">
+  <%= pie_chart Good.group(:name).count %>
+  <p>Add your <%= link_to "Products", new_good_path %></h4> here. You can view, edit or delete them too.</p>
+</div>
+<div class="span4 well">
     <form>
       <input type="text" ng-model="newEntry.name" placeholder="Enter here">
     </form>
     {{newEntry.name}}
-</div>
-<div class="span4 well">
-  <%= line_chart Request.group(:name).group(:created_at).count %>
-  <h4><%= link_to "Order", distributors_path %></h4>
-</div>
-<div class="span4 well">
-  <%= pie_chart Distributor.group(:name).count %>
-  <h4><%= link_to "Order History", requests_path %></h4>
-</div>
-<div class="span4 well">
-  <%= bar_chart Post.group(:title).group(:created_at).count %>
-  <h4><%= link_to "Notes", posts_path %></h4>
-</div>
-<div class="span4 well">
-  <%= pie_chart User.group(:username).count %>
-  <h4><%= link_to "Users", users_path %></h4>
-</div>
-<div class="span4 well">
-  <%= bar_chart Inventory.group(:name).count %>
-  <h4><%= link_to "Inventories", inventories_path %></h4>
-</div>
-<div class="span4 well">
-  <%= pie_chart Good.group(:name).count %>
-  <h4><%= link_to "New Product", new_good_path %></h4>
 </div>
