--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,14 +1,14 @@
 <div class="span5 well">
   <%= form_for @request do |f| %>
   <div class="span4 well">
-     <%= f.label "Name" %>
-    <%= f.collection_check_boxes :distributor_ids, Distributor.all, :id, :name do |cb|%>
+     <%= f.label :Name %>
+     <%= f.collection_check_boxes :distributor_ids, Distributor.all, :id, :name do |cb|%>
       <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
     <% end %>
   </div>
     <br/>
   <div class="span4 well">
-    <%= f.label "Email" %>
+    <%= f.label :Email %>
     <%= f.collection_check_boxes :distributor_ids, Distributor.all, :id, :email do |cb|%>
       <% cb.label(class: "checkbox inline") {cb.check_box(class: "checkbox") + cb.text} %>
     <% end %>
