--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app>
   <head>
-    <title>PaperThinCut - quick look and make decision</title>
+    <title>//paprthin - quick look and make decision</title>
       <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag "application" %>
       <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
@@ -14,7 +14,7 @@
     <div id="sticky">
       <div class="nav">
         <ul class="pull-left">
-          <strong><li><%= link_to "//PaprThin", root_path %></li></strong>
+          <strong><li><%= link_to "//paprthin", root_path %></li></strong>
           <% if logged_in? %>
           <li>
             <%= link_to 'Log Out', logout_path %>
