--- a/app/views/backouts/_form.html.erb
+++ b/app/views/backouts/_form.html.erb
@@ -1,3 +1,4 @@
+
 <div class="col-md-6">
   <%= form_for @backout do |f| %>
     <div class="control-group">
@@ -8,4 +9,6 @@
       <%= f.label :name %>
       <%= f.text_field :name %>
      </div>
+     <%= f.submit "Submit", class: 'btn btn-success' %>
   <% end %>
+</div>
