--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,6 @@
-<div class="span5 well">
- <h3>Post Message</h3>
- <%= render 'form' %>
+<div class="span6 well">
+  <div class="control-group">
+    <h4>Post Message</h4>
+  </div>
+  <%= render 'form' %>
 </div>
