--- a/app/views/distributors/_form.html.erb
+++ b/app/views/distributors/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="col-md-6">
   <%= form_for @distributor do |f| %>
     <div class="control-group">
       <%= f.label :name %>
@@ -13,7 +13,7 @@
       <%= f.text_area :description %>
     </div>
     <div class="control-group">
-      <%= f.submit(@distributor.new_record? ? "Add Distributor" : "Update") %>
+      <%= f.submit "Submit", class: "btn btn-success" %>
     </div>
   <% end %>
-</div>
+</div
