--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,17 +1,18 @@
 <div class="span5 well">
+<div class="col-md-4">
   <%= form_for @request do |f| %>
   <div class="control-group">
      <%= f.label :name %>
      <%= f.text_field :name %>
   </div>
-  <br/>
   <div class="control-group">
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
   <br/>
   <div class="control-group">
-    <%= f.submit %>
+    <%= f.submit "Submit", class: "btn btn-success" %>
   </div>
   <% end %>
+</div>
 </div>
