--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <center><h3>Simplify your operation. <strong>//paprthin</strong> makes ordering, managing inventory and posting messages easier.<h3></center>
+  <center><h3><strong>"//paprthin</strong> helps manage ordering, inventory and backout."<h3></center>
 </div>
 <div class="col-md-4">
   <%= line_chart Request.group(:name).group(:created_at).count %>
