--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,12 +1,17 @@
-<%= form_for @user do |f| %>
-  <%= f.label :username %>
-  <%= f.text_field :username %>
-  <br/>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <br/>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  <br/>
-  <%= f.submit(@user.new_record? ? "Create User" : "Update User profile")  %>
-<% end %>
+<div class="col-md-5">
+  <%= form_for @user do |f| %>
+    <div class="control-group>">
+      <%= f.label :username %>
+      <%= f.text_field :username %>
+    </div>
+    <div class="control-group">
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+    </div>
+    <div class="control-group">
+      <%= f.label :password %>
+      <%= f.password_field :password %>
+    </div>
+    <%= f.submit "Submit", class: "btn btn-success" %>
+  <% end %>
+</div>
