--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -27,6 +27,7 @@
 </div>
 
 <div class="span4 well">
+  <script src='javascripts/add.js'></script>
     <form>
       <input type="text" ng-model="newEntry.name" placeholder="Enter here">
     </form>
