--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,11 @@ input[type=checkbox] + label {
     line-height: 1em;
 }
 
+form input[type='text'] {
+   width: 100px;
+   height: 30px;
+ }
+
  body {
   padding-left: 15px;
   background-color: #555555;
