--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,13 +1,17 @@
 <div class="col-md-12">
-  <center><h3><strong>"//paprthin</strong> helps manage ordering, inventory and backout."<h3></center>
+  <center><h3><strong>"//paprthin</strong>. <em>order. backout. and inventory."</em><h3></center>
 </div>
 <div class="col-md-4">
-  <%= line_chart Request.group(:name).group(:created_at).count %>
-    <p>Only <strong><%= link_to "Order", distributors_path %></strong> list the items that you want. No need to shift through the catalog everytime anymore. Also see <strong><%= link_to "History", requests_path %></strong></p>
+  <%= pie_chart Request.group(:created_at).count %>
+    <p>Only <strong><%= link_to "Order", distributors_path %></strong> from the list of the items that you want. Learn from <strong><%= link_to "Past Orders", requests_path %></strong></p>
 </div>
 <div class="col-md-4">
   <%= pie_chart Distributor.group(:name).count %>
-  <p>Before head to the inventory, we also have <strong><%= link_to "Backouts", backouts_path %></strong> feature. To make sure you count them right<p>
+  <p>Before head to the inventory, we also have <strong><%= link_to "Backouts", backouts_path %></strong> feature. To make sure you count them right.<p>
+</div>
+<div class="col-md-4">
+  <%= bar_chart Inventory.group(:name).count %>
+  <p>Since you'll more than likely to have <strong><%= link_to "Inventories", inventories_path %></strong> at the end of the month, we though might as well include it here.</p>
 </div>
 <div class="col-md-4">
   <%= bar_chart Post.group(:title).group(:created_at).count %>
@@ -17,10 +21,7 @@
   <%= pie_chart User.group(:username).count %>
   <p>See how many <strong><%= link_to "Users", users_path %></strong> have access to your app and their identities.</p>
 </div>
-<div class="col-md-4">
-  <%= bar_chart Inventory.group(:name).count %>
-  <p>Since you'll more than likely to have <strong><%= link_to "Inventories", inventories_path %></strong> at the end of the month, we though might as well include it here.</p>
-</div>
+
 <div class="col-md-4">
   <%= pie_chart Good.group(:name).count %>
   <p>Add your <%= link_to "Products", new_good_path %></h4> here. You can view, edit or delete them too.</p>
