multiple buttons backouts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,7 @@
  @import "bootstrap";
  @import "bootstrap-responsive";
 
-input[type=checkbox] + label {
+input[type=checkbox] {
     display: inline;
     margin-left: 0.5em;
     margin-right: 2em;
