--- a/app/views/inventories/show.html.erb
+++ b/app/views/inventories/show.html.erb
@@ -3,4 +3,5 @@
 </div>
 <div class="span3 well">
   <h5><%= link_to "Edit", edit_inventory_path %></h5>
+  <em><%= link_to 'Delete', inventory_path, method: :delete, data: { confirm: 'Are you sure?' } %></em>
 </div>
