--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,12 @@ input[type=checkbox] {
     line-height: 1em;
 }
 
+label {
+  width: 30%;
+  /* positions the label text beside the input */
+  text-align: left;
+}
+
 form input[type='text'] {
    width: 100px;
    height: 30px;
