--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,6 +80,7 @@ form input[type='text'] {
   color: white;
   font-family: Comic Sans MS, serif;
   padding-left: 15px;
+  padding-right: 25px;
 }
 
 .container {
