--- a/app/views/baskets/index.html.erb
+++ b/app/views/baskets/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @baskets.each do |basket| %>
       <tr>
+        <td><%= basket.created_at  %></td>
         <td><%= link_to 'Show', basket %></td>
         <td><%= link_to 'Edit', edit_basket_path(basket) %></td>
         <td><%= link_to 'Destroy', basket, method: :delete, data: { confirm: 'Are you sure?' } %></td>
