--- a/app/views/inventories/_form.html.erb
+++ b/app/views/inventories/_form.html.erb
@@ -4,6 +4,10 @@
     <%= f.text_field :name %>
   </div>
   <div class="control-group">
+    <%= f.label :price %>
+    <%= f.text_field :price %>
+  </div>
+  <div class="control-group">
     <%= f.label :amount %>
     <%= f.text_field :amount %>
   </div>
