--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,6 +1,12 @@
 <div class="span5 well">
   <% @inventories.each do |inventory| %>
-    <h4><li><%= link_to inventory.name, inventory %></li></h4>
+ <table>
+    <tr>
+      <td><%= link_to inventory.name, inventory %> </td>
+      <td><%= inventory.amount %> </td>
+      <td><%= inventory.unit %> </td>
+    </tr>
+  </table>
   <% end %>
 </div>
 <div class="span3 well">
