--- a/app/views/inventories/_form.html.erb
+++ b/app/views/inventories/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :unit %>
     <%= f.text_field :unit %>
   </div>
+   <div class="control-group">
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
   <div class="control-group">
     <%= f.submit "Submit", class: "btn btn-success" %>
   </div>
