--- a/app/views/app_mailer/send_inventory.html.erb
+++ b/app/views/app_mailer/send_inventory.html.erb
@@ -1,11 +1,3 @@
 <div class="span5 well">
-  <% @inventories.each do |inventory| %>
- <table>
-    <tr>
-      <td><%= link_to inventory.name, inventory %> </td>
-      <td><%= inventory.amount %> </td>
-      <td><%= inventory.unit %> </td>
-    </tr>
-  </table>
-  <% end %>
+  <%= render 'inventories/inventory' %>
 </div>
