--- a/app/views/app_mailer/send_inventory.html.erb
+++ b/app/views/app_mailer/send_inventory.html.erb
@@ -1,3 +1,11 @@
 <div class="span5 well">
-  <%= render 'inventories/inventory' %>
+  <% @inventories.each do |inventory| %>
+ <table>
+    <tr>
+      <td><%= inventory.name %> </td>
+      <td><%= inventory.amount %> </td>
+      <td><%= inventory.unit %> </td>
+    </tr>
+  </table>
+  <% end %>
 </div>
