--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,10 +1,12 @@
 <div class="span5 well">
  <table>
+  <% @inventories.each do |inventory| %>
     <tr>
-      <td><%= link_to @inventory.name, @inventory %> </td>
-      <td><%= @inventory.amount %> </td>
-      <td><%= @inventory.unit %> </td>
+      <td><%= link_to inventory.name, @inventory %> </td>
+      <td><%= inventory.amount %> </td>
+      <td><%= inventory.unit %> </td>
     </tr>
+  <% end %>
   </table>
 </div>
 <div class="span3 well">
