--- a/app/views/app_mailer/send_inventory.html.erb
+++ b/app/views/app_mailer/send_inventory.html.erb
@@ -1,11 +1,5 @@
 <div class="span5 well">
-  <% @inventories.each do |inventory| %>
- <table>
-    <tr>
-      <td><%= inventory.name %> </td>
-      <td><%= inventory.amount %> </td>
-      <td><%= inventory.unit %> </td>
-    </tr>
-  </table>
-  <% end %>
+  <h4>Megan,</h4>
+  <p>Here is the online version of last month's inventory. Let me know if this works for you, or if you prefer the paper version.</p>
+  <em><h4><a href="paperthincut.herokuapp.com/inventories">Click here to see the inventory</h4></em>
 </div>
